--- a/templates/settings/cashier/cashier.html
+++ b/templates/settings/cashier/cashier.html
@@ -34,11 +34,11 @@
         Customer
       </button>
       <button
-        hx-get="{% url 'attribute'%}"
+        hx-get="{% url 'order_view'%}"
         role="tab" aria-controls="tab-contents" aria-selected="false"
         class="px-4 py-2 rounded-lg text-white rounded-b-none hover:bg-gray-500"
         _="on click remove .bg-gray-500 from <button/> in tabs then add .bg-gray-500 on me" >
-        Attributes & Products
+        Orders
       </button>
     </div>
     <div id="tab-contents"
