--- a/templates/settings/cashier/tabs/order_details.html
+++ b/templates/settings/cashier/tabs/order_details.html
@@ -1,3 +1,4 @@
+{% include "includes/messages.html" %}
 <div 
   hx-get="{% url 'order_details' order.id %}"
   hx-trigger="order_details_refresh"
@@ -151,10 +152,8 @@
         </div>
         <div class="rounded-full bg-gray-700 h-10 w-10 flex justify-center items-center">
           <a 
-            hx-get="{% url 'edit_comment' comment.id %}"
-            hx-target="#modal_form"
-            hx-swap="innerHtml"
-            _="on click remove .hidden from modal_div " 
+            hx-post="{% url 'delete_comment' comment.id %}"
+            hx-confirm="Are you sure you want to delete this comment?"
             class="cursor-pointer hover:text-red-700 text-white ">
             <i class="fa-solid fa-trash "></i>
           </a>
