--- a/templates/home.html
+++ b/templates/home.html
@@ -36,7 +36,7 @@
           rounded-lg p-4 hover:bg-gray-700 hover:scale-105 hover:shadow-lg hover:rotate-1 transition 
           duration-300 transform shadow-md hover:text-yellow-300 hover:-translate-y-1 hover:text-shadow">
           <a
-            href="#" 
+            href="{% url "editor_view" %}" 
             class="w-full h-full flex justify-center items-center">
             Editor
           </a>
